--- a/app/src/main/res/layout/activity_add_tag.xml
+++ b/app/src/main/res/layout/activity_add_tag.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddTagActivity">
+    tools:context=".AddEditTagActivity">
 
     <EditText
         android:id="@+id/edit_text_name"
