--- a/app/src/main/res/layout/edit_tag_item.xml
+++ b/app/src/main/res/layout/edit_tag_item.xml
@@ -2,9 +2,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -12,21 +12,28 @@
         android:padding="8dp">
 
         <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/image"
             android:layout_width="100dp"
             android:layout_height="80dp"
-            android:id="@+id/image"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/text_view_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/image"
             android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/image"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/examplename"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/edit"
+            android:layout_width="30dp"
+            android:layout_height="80dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_edit" />
 
     </RelativeLayout>
 
