--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/edit_tags"
+        android:title="@string/edit_tags"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/delete_all_tags"
-        android:title="Delete all tags"
+        android:title="@string/delete_all_tags"
         app:showAsAction="never"/>
 </menu>
